<?xml version="1.0"?>
<package format="3">
  <name>traversability_msgs</name>
  <version>0.4.0</version>
  <description>ROS Message definitions for traversability estimation/checking.</description>
  <maintainer email="pfankhauser@anybotics.com">Peter Fankhauser</maintainer>
  <author email="pfankhauser@anybotics.com">Peter Fankhauser</author>
  <license>MIT</license>
  <url type="website">https://github.com/ethz-asl/traversability_estimation</url>
  <url type="bugtracker">https://github.com/ethz-asl/traversability_estimation/issues</url>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <depend>geometry_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
